--- a/portfolio.html
+++ b/portfolio.html
@@ -105,6 +105,7 @@
           <h1>Portfolio</h1>
             <ul id="portfolio">
               <li><a href="asd-projects/data-shapes/index.html">Data Shapes</a></li>
+              <li><a href="projects/circularity/index.html">Circularity</a></li>
               <!-- <li><a href=""></a></li>
               <li><a href=""></a></li> -->
             </ul>
