--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,8 @@
             <ul id="portfolio">
               <li><a href="asd-projects/data-shapes/index.html">Data Shapes</a></li>
               <li><a href="projects/circularity/index.html">Circularity</a></li>
-              <!-- <li><a href=""></a></li>
+              <li><a href="asd-projects/debugging-exercise/index.html">Debugger</a></li>
+              <!-- <li><a href=""></a><li>
               <li><a href=""></a></li> -->
             </ul>
         </div>
