--- a/portfolio.html
+++ b/portfolio.html
@@ -104,9 +104,9 @@
         <div class="content">
           <h1>Portfolio</h1>
             <ul id="portfolio">
-              <li><a href="asd-projects/data-shapes/index.html">Data Shapes</a></li>
-              <li><a href="projects/circularity/index.html">Circularity</a></li>
-              <li><a href="asd-projects/debugging-exercise/index.html">Debugger</a></li>
+              <a href="asd-projects/data-shapes/index.html"><li>Data Shapes</li></a>
+              <a href="projects/circularity/index.html"><li>Circularity</li></a>
+              <a href="asd-projects/debugging-exercise/index.html"><li>Debugger</li></a>
               <!-- <li><a href=""></a><li>
               <li><a href=""></a></li> -->
             </ul>
