--- a/portfolio.html
+++ b/portfolio.html
@@ -107,6 +107,8 @@
               <a href="asd-projects/data-shapes/index.html"><li>Data Shapes</li></a>
               <a href="projects/circularity/index.html"><li>Circularity</li></a>
               <a href="asd-projects/debugging-exercise/index.html"><li>Debugger</li></a>
+              <a href="asd-projects/snake/index.html"><li>Snake</li></a>
+              <a href="projects/bouncing-box/index.html"><li>Bouncing box</li></a>
               <!-- <li><a href=""></a><li>
               <li><a href=""></a></li> -->
             </ul>
