--- a/portfolio.html
+++ b/portfolio.html
@@ -109,6 +109,7 @@
               <a href="asd-projects/debugging-exercise/index.html"><li>Debugger</li></a>
               <a href="asd-projects/snake/index.html"><li>Snake</li></a>
               <a href="projects/bouncing-box/index.html"><li>Bouncing box</li></a>
+              <a href="asd-projects/image-filtering/index.html"><li>Image Filtering</li></a>          
               <!-- <li><a href=""></a><li>
               <li><a href=""></a></li> -->
             </ul>
